--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -18,5 +18,5 @@ repos:
     rev: 1.5.0
     hooks:
       - id: interrogate
-        args: [-vv, -f 80, -p True, -n True]
+        args: ["-vv", "-f 80", "-p True", "-n True"]
         pass_filenames: false
