--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,11 @@ name: Build & Release
 
 on:
   push:
+    branches:
+      - master
+  pull_request:
+    branches:
+      - master
     tags:
       - "v*"
 
